--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.mailbox.yml
@@ -189,7 +189,7 @@ items:
     summary: |-
       获取包含以本地客户端时间表示的时间信息的字典。
 
-      Outlook 网页版或桌面客户端上的邮件应用程序使用的日期和时间可以使用不同的时区。 Outlook 使用客户端计算机时区;Web 上的 Outlook 使用 Exchange 管理中心 (EAC) 上设置的时区。 应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
+      Outlook 网页版或桌面客户端上的邮件应用程序使用的日期和时间可以使用不同的时区。 Outlook 使用客户端计算机时区;Web 上的 Outlook 使用 Exchange 管理中心（EAC）上设置的时区。 应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
 
       如果邮件应用程序在桌面客户端上的 Outlook 中运行，则该 `convertToLocalClientTime` 方法将返回一个 dictionary 对象，并将值设置为客户端计算机时区。 如果邮件应用程序在 web 上的 Outlook 中运行，则该 `convertToLocalClientTime` 方法将返回一个 dictionary 对象，其中的值设置为 EAC 中指定的时区。
     remarks: |-
@@ -224,7 +224,7 @@ items:
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
 
-      通过 EWS 或通过属性检索的项目 Id `itemId` 使用的格式不同于 REST api 所使用的格式 (例如[OUTLOOK 邮件 API](https://docs.microsoft.com/previous-versions/office/office-365-api/api/version-2.0/mail-rest-operations)或[Microsoft Graph](https://graph.microsoft.io/) ）<!-- -->. 方法将 EWS 格式化的 ID 转换为正确的 REST 格式。
+      通过 EWS 或通过属性检索的项目 Id `itemId` 使用的格式不同于 REST api （如[OUTLOOK 邮件 API](https://docs.microsoft.com/previous-versions/office/office-365-api/api/version-2.0/mail-rest-operations)或[Microsoft Graph](https://graph.microsoft.io/) ）使用的格式<!-- -->. 方法将 EWS 格式化的 ID 转换为正确的 REST 格式。
 
       #### <a name="examples"></a>示例
 
@@ -331,11 +331,11 @@ items:
 
       包含以下成员：
 
-      - `hostName` (字符串) ：一个表示主机应用程序的名称的字符串。 它应为下列值之一：`Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者`OutlookAndroid`<!-- -->. **注意**：为 outlook 在桌面客户端上的 "outlook" 值返回 (即 Windows 和 Mac) 。
+      - `hostName`（字符串）：一个表示主机应用程序的名称的字符串。 它应为下列值之一：`Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者`OutlookAndroid`<!-- -->. **注意**：针对桌面客户端（即 Windows 和 Mac）上的 outlook 返回了 "outlook" 值。
 
-      - `hostVersion` (字符串) ：一个字符串，表示主机应用程序或 Exchange Server 的版本 (例如，"15.0.468.0" ) 。 如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行，则该 `hostVersion` 属性将返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
+      - `hostVersion`（字符串）：表示主机应用程序或 Exchange 服务器的版本的字符串（例如，"15.0.468.0"）。 如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行，则该 `hostVersion` 属性将返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
 
-      - `OWAView` (`MailboxEnums.OWAView` 或字符串) ：代表 web 上的 Outlook 当前视图的枚举 (或字符串文本) 。 如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。 Web 上的 Outlook 有三个视图 (-当屏幕变宽时显示; 当屏幕变宽时显示; `OneColumn` `TwoColumns` `ThreeColumns` 当) 屏幕宽度与屏幕和窗口的宽度相对应时显示，以及可以显示的列数。
+      - `OWAView`（ `MailboxEnums.OWAView` 或字符串）：代表 web 上的 Outlook 当前视图的枚举（或字符串文字）。 如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。 Web 上的 Outlook 具有三个视图（当屏幕变宽时显示; 当屏幕宽时显示; 当屏幕 `OneColumn` `TwoColumns` 为宽时显示）与 `ThreeColumns` 屏幕和窗口的宽度以及可以显示的列数相对应。
 
       有关详细信息，请与[Office 诊断](xref:outlook!Office.Diagnostics:interface)<!-- -->.
     remarks: |-
@@ -358,7 +358,7 @@ items:
 
       `displayAppointmentForm` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
 
-      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问 (包括定期系列实例的项目 ID) 的属性。
+      在 Mac 上的 Outlook 中，可以使用此方法显示不属于定期系列或定期系列的主约会的单个约会。 但是，无法显示该系列的实例，因为您无法访问定期系列的实例的属性（包括项目 ID）。
 
       在 web 上的 Outlook 中，仅当窗体的正文小于或等于32K 个字符时，此方法才会打开指定的窗体。
 
@@ -602,7 +602,7 @@ items:
           - string
   - uid: 'outlook!Office.Mailbox#getCallbackTokenAsync:member(1)'
     summary: |-
-      获取一个字符串，其中包含用于调用 REST Api 或 Exchange Web Services (EWS) 的标记。
+      获取一个包含用于调用 REST Api 或 Exchange Web 服务（EWS）的令牌的字符串。
 
       `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
 
@@ -616,7 +616,7 @@ items:
 
       *REST 令牌*
 
-      请求 REST 令牌时 (`options.isRest` = `true`<!-- -->) ，生成的令牌将无法用于对 EWS 调用进行身份验证。 令牌的作用域限制为对当前项及其附件的只读访问，除非外接程序在其清单中指定了 `ReadWriteMailbox` 权限。 如果指定了 `ReadWriteMailbox` 权限，则生成的令牌将授予对邮件、日历和联系人的读/写权限，包括发送邮件的功能。
+      当请求 REST 令牌时（`options.isRest` = `true`<!-- -->），则生成的令牌将不能用于对 EWS 调用进行身份验证。 令牌的作用域限制为对当前项及其附件的只读访问，除非外接程序在其清单中指定了 `ReadWriteMailbox` 权限。 如果指定了 `ReadWriteMailbox` 权限，则生成的令牌将授予对邮件、日历和联系人的读/写权限，包括发送邮件的功能。
 
       在进行 REST API 调用时，外接程序应使用 `restUrl` 属性来确定要使用的正确 URL。
 
@@ -632,7 +632,7 @@ items:
 
       *EWS 令牌*
 
-      请求 EWS 令牌时 (`options.isRest` = `false`<!-- -->) ，生成的令牌将无法用于对 REST API 调用进行身份验证。 令牌的作用域限制为访问当前项。
+      请求 EWS 令牌时（`options.isRest` = `false`<!-- -->），则生成的令牌将不能用于对 REST API 调用进行身份验证。 令牌的作用域限制为访问当前项。
 
       外接程序应使用 `ewsUrl` 属性来确定进行 EWS 调用时要使用的正确 URL。
 
@@ -824,7 +824,7 @@ items:
           - 'outlook!Office.Mailbox#item~0:complex'
   - uid: 'outlook!Office.Mailbox#makeEwsRequestAsync:member(1)'
     summary: |-
-      向承载用户邮箱的 Exchange 服务器上 (EWS) 服务发出对 Exchange Web 服务的异步请求。
+      向承载用户邮箱的 Exchange 服务器上的 Exchange Web 服务（EWS）服务发出异步请求。
 
       在这些情况下，加载项应该使用 REST API 来改为访问用户的邮箱。
 
@@ -1044,7 +1044,7 @@ items:
 
       在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `restUrl` 成员。 您的应用程序必须具有 `ReadWriteItem` 调用该 `saveAsync` 方法的权限。
 
-      但是，在委托或共享方案中，应改为使用 `targetRestUrl` `SharedProperties` 要求集 1.8) 中引入的对象的属性 (。 有关详细信息，请参阅[代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access)文章。
+      但是，在委托或共享方案中，您应该改用 `targetRestUrl` 对象的属性 `SharedProperties` （在要求集1.8 中引入）。 有关详细信息，请参阅[代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access)文章。
 
       \[[API 集：邮箱 1.5](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
