--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartdatalabeldata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartdatalabeldata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartDataLabelData:interface'
-    summary: <span data-ttu-id="2da61-101">描述通过调用返回的数据的接口`chartDataLabel.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="2da61-101">An interface describing the data returned by calling `chartDataLabel.toJSON()`</span></span><!-- --><span data-ttu-id="2da61-102">.</span><span class="sxs-lookup"><span data-stu-id="2da61-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartDataLabel.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartDataLabelData
     fullName: Excel.Interfaces.ChartDataLabelData
     langs:
