--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.conditionalrangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.conditionalrangefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData:interface'
-    summary: <span data-ttu-id="4a6f4-101">描述通过调用返回的数据的接口`conditionalRangeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4a6f4-101">An interface describing the data returned by calling `conditionalRangeFont.toJSON()`</span></span><!-- --><span data-ttu-id="4a6f4-102">.</span><span class="sxs-lookup"><span data-stu-id="4a6f4-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`conditionalRangeFont.toJSON()`<!-- -->.
     name: Excel.Interfaces.ConditionalRangeFontData
     fullName: Excel.Interfaces.ConditionalRangeFontData
     langs:
