--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.custompropertycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.custompropertycollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionData:interface'
-    summary: <span data-ttu-id="a2364-101">描述通过调用返回的数据的接口`customPropertyCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="a2364-101">An interface describing the data returned by calling `customPropertyCollection.toJSON()`</span></span><!-- --><span data-ttu-id="a2364-102">.</span><span class="sxs-lookup"><span data-stu-id="a2364-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`customPropertyCollection.toJSON()`<!-- -->.
     name: Excel.Interfaces.CustomPropertyCollectionData
     fullName: Excel.Interfaces.CustomPropertyCollectionData
     langs:
