--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="15baa-101">一个用于更新 NamedItemCollection 对象上的数据的接口，可用于`namedItemCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="15baa-101">An interface for updating data on the NamedItemCollection object, for use in `namedItemCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="15baa-102">.</span><span class="sxs-lookup"><span data-stu-id="15baa-102"></span></span>'
+    summary: '一个用于更新 NamedItemCollection 对象上的数据的接口，可用于`namedItemCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.NamedItemCollectionUpdateData
     fullName: Excel.Interfaces.NamedItemCollectionUpdateData
     langs:
