--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttitleformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttitleformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="4edd2-101">提供对图表标题的 Office 艺术格式的访问权限。</span><span class="sxs-lookup"><span data-stu-id="4edd2-101">Provides access to the office art formatting for chart title.</span></span>
+      提供对图表标题的 Office 艺术格式的访问权限。
 
-      <span data-ttu-id="4edd2-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4edd2-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartTitleFormatLoadOptions
     fullName: Excel.Interfaces.ChartTitleFormatLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="4edd2-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="4edd2-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="4edd2-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="4edd2-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="4edd2-105">).</span><span class="sxs-lookup"><span data-stu-id="4edd2-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="4edd2-106">表示对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="4edd2-106">Represents the font attributes (font name, font size, color, etc.) for an object.</span></span>
+      表示对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="4edd2-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4edd2-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
