--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttrendlinelabeldata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttrendlinelabeldata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData:interface'
-    summary: <span data-ttu-id="30d77-101">描述通过调用返回的数据的接口`chartTrendlineLabel.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="30d77-101">An interface describing the data returned by calling `chartTrendlineLabel.toJSON()`</span></span><!-- --><span data-ttu-id="30d77-102">.</span><span class="sxs-lookup"><span data-stu-id="30d77-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendlineLabel.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineLabelData
     fullName: Excel.Interfaces.ChartTrendlineLabelData
     langs:
