--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rowproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rowproperties.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.RowProperties:interface'
     summary: |-
-      <span data-ttu-id="c0380-101">表示 getRowProperties 的返回属性。</span><span class="sxs-lookup"><span data-stu-id="c0380-101">Represents the returned properties of getRowProperties.</span></span>
+      表示 getRowProperties 的返回属性。
 
-      <span data-ttu-id="c0380-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0380-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RowProperties
     fullName: Excel.RowProperties
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.RowProperties#rowIndex:member'
   - uid: 'excel!Excel.RowProperties#address:member'
     summary: |-
-      <span data-ttu-id="c0380-103">表示`address`属性。</span><span class="sxs-lookup"><span data-stu-id="c0380-103">Represents the `address` property.</span></span>
+      表示`address`属性。
 
-      <span data-ttu-id="c0380-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0380-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
     fullName: address
     langs:
@@ -34,9 +34,9 @@ items:
           - string
   - uid: 'excel!Excel.RowProperties#addressLocal:member'
     summary: |-
-      <span data-ttu-id="c0380-105">表示`addressLocal`属性。</span><span class="sxs-lookup"><span data-stu-id="c0380-105">Represents the `addressLocal` property.</span></span>
+      表示`addressLocal`属性。
 
-      <span data-ttu-id="c0380-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0380-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
     fullName: addressLocal
     langs:
@@ -49,9 +49,9 @@ items:
           - string
   - uid: 'excel!Excel.RowProperties#rowIndex:member'
     summary: |-
-      <span data-ttu-id="c0380-107">表示`rowIndex`属性。</span><span class="sxs-lookup"><span data-stu-id="c0380-107">Represents the `rowIndex` property.</span></span>
+      表示`rowIndex`属性。
 
-      <span data-ttu-id="c0380-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c0380-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
     fullName: rowIndex
     langs:
